# language-immersion-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  alembic.ini  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 637d0b7d010d_create_users_and_message_logs.py  9c5f0b8d1d2e_expand_learning_domain_schema.py  b4f7c6a21d13_split_profiles_by_language.py
app/: __init__.py  main.py  message_formatting.py
app/agents/: base.py  registry.py  specialists.py
app/api/: __init__.py  app.py  dependencies.py  main.py  schemas.py  security.py
app/api/routes/: __init__.py  auth.py  learning.py  profile.py  (+1 more)
app/application/: __init__.py  container.py  orchestrator.py
app/bot/: __init__.py  router.py
app/domain/: enums.py  schemas.py
app/infra/: __init__.py  config.py
app/llm/: __init__.py  base.py  client.py
miniapp/: .stylelintrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.cjs  prettier.config.mjs  tsconfig.json  vite.config.ts
miniapp/public/: manifest.json
miniapp/src/: main.tsx  vite-env.d.ts
scripts/: set-webhook.mjs
src/: proxy.ts
src/app/: globals.css  layout.tsx
src/lib/: llm.ts  markdown.ts  orchestrator.ts  utils.ts
src/types/: index.ts
tests/: test_agent_prompts.py  test_feedback_service.py  test_miniapp_security.py  test_orchestrator.py  test_practice_service.py  test_start_handler.py
(+96 files in other folders)
